--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -41,7 +41,7 @@
                 <div class="lists">
                     <a href="./artical_content.php?artical_id=<?php echo $a['artical_id']; ?>"><h5 class="art_list_title"><?php echo $a['title']; ?></h5></a>
                     <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                        Posted By <?php echo $a['pubtime']?>
                     </p>
                     <div class="clear-float"></div>
                     <hr />
