--- a/web/www/view/artical_content.html
+++ b/web/www/view/artical_content.html
@@ -38,7 +38,7 @@
             </a>
             <h4 class="art_title"><?php echo $rs['title']?></h4>
             <p class="posted_time">
-                Posted By XXX XXXX-XX-XX XX:XX:XX
+                Posted By <?php echo $rs['pubtime']?>
             </p>
             <hr />
             <p class="art_content">
