--- a/web/www/view/tags_detail.html
+++ b/web/www/view/tags_detail.html
@@ -34,76 +34,14 @@
           <h4 class="list_title">Tag_Name</h4>
           <div class="list_board">
               <div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                <?php foreach($rs as $r) { ?>
+                  <a href="./artical_content.php?artical_id=<?php echo $r['artical_id']; ?>"><h5 class="art_list_title"><?php echo $r['title']; ?></h5></a>
                   <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                      Posted By <?php echo $r['pubtime']; ?>
                   </p>
                   <div class="clear-float"></div>
                   <hr />
-              </div>
-              <div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
-              </div><div class="lists">
-                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
-                  <p class="posted_time">
-                      Posted By XXX XXXX-XX-XX XX:XX:XX
-                  </p>
-                  <div class="clear-float"></div>
-                  <hr />
+                <?php } ?>
               </div>
           </div>
           <div class="page">
