msg & artical 页面检测登陆

--- a/web/www/view/sign_in.html
+++ b/web/www/view/sign_in.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="container">
-        <form action="./lib/sign_in_check.php" method="post">
+        <form action="./sign_in_check.php" method="post">
             <div class="user_name">
                 <span class="user_text">昵&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp称：</span>
                 <input class="user_blank" id="user_name" name="user_name" type="text" />
