--- a/web/www/view/sign_up.html
+++ b/web/www/view/sign_up.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="container">
-        <form action="./lib/sign_up_check.php" method="post">
+        <form action="./sign_up_check.php" method="post">
 
             <div class="user_name">
                 <span class="user_text">昵&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp称：</span>
