--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -23,7 +23,15 @@
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.php">登陆</a></li>
+                <li>
+                  <?php
+                    if(!fLogin()){
+                      echo '<a href="./sign_in.php">登陆</a>';
+                    }else{
+                      echo "欢迎您，" . $_COOKIE['name'];
+                    }
+                  ?>
+                </li>
                 <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
