--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -32,7 +32,15 @@
                     }
                   ?>
                 </li>
-                <li><a href="./sign_up.php">注册</a></li>
+                <li>
+                  <?php
+                    if(!fLogin()){
+                      echo '<a href="./sign_up.php">注册</a>';
+                    }else{
+                      echo '<a href="./logout.php">登出</a>';
+                    }
+                  ?>
+                </li>
             </ul>
         </div>
     </header>
