--- a/web/www/view/sign_up.html
+++ b/web/www/view/sign_up.html
@@ -23,8 +23,24 @@
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.php">登陆</a></li>
-                <li><a href="./sign_up.php">注册</a></li>
+                <li>
+                  <?php
+                    if(!fLogin()){
+                      echo '<a href="./sign_in.php">登陆</a>';
+                    }else{
+                      echo "欢迎您，" . $_COOKIE['name'];
+                    }
+                  ?>
+                </li>
+                <li>
+                  <?php
+                    if(!fLogin()){
+                      echo '<a href="./sign_up.php">注册</a>';
+                    }else{
+                      echo '<a href="./logout.php">登出</a>';
+                    }
+                  ?>
+                </li>
             </ul>
         </div>
     </header>
