发布日志记录用户名以及页面显示日志作者

--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -57,7 +57,7 @@
                 <div class="lists">
                     <a href="./artical_content.php?artical_id=<?php echo $a['artical_id']; ?>"><h5 class="art_list_title"><?php echo $a['title']; ?></h5></a>
                     <p class="posted_time">
-                        Posted By <?php echo $a['pubtime']?>
+                        Posted By <?php echo $a['author']; ?>. <?php echo $a['pubtime']; ?>
                     </p>
                     <div class="clear-float"></div>
                     <hr />
