添加用户中心页面

--- a/web/www/view/person.html
+++ b/web/www/view/person.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="board">
         <h4 class="list_title">
-          <?php echo $_COOKIE['name']; ?>
+          <?php echo $_COOKIE['name']; ?>  个人中心
         </h4>
         <div class="left">
           <h4 class="list_title">留言</h4>
