个人简介（简历）

--- a/web/www/view/about.html
+++ b/web/www/view/about.html
@@ -74,53 +74,48 @@
         	<div id="fh5co-main" style="width: 700px;">
 		<div class="fh5co-tab-wrap" style="padding: 0px;margin-left: 0px;">
 			<ul class="fh5co-tab-menu">
-				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">Profile</span></a></li>
-				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
+				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">简介</span></a></li>
+				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">生涯经历</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">项目经验</span></a></li>
+				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">技能</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+								<img src="images/profile_img.png">
 							</figure>
-							<h1>Claire Aguilar</h1>
-							<p>Born and raised in <a href="#">Brooklyn</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <a href="#">Semantics</a>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+							<h1>张翔云</h1>
+							<p>热爱新鲜事物，热爱互联网。曾担任过Web工程师，兼运维和产品助理，帮助公司对网站进行功能开发与维护，以及需求攥写。具有良好的学习能力。</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
 							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Web Design</h3>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
+								<h3 class="border-bottom">热情，执着，刻苦</h3>
+								<br />
+								<p>Github: github.com/ZaraZ</p>
+								<p>个人邮箱: xiangyunz@outlook.com</p>
+								<br />
 							</div>
 						</div>
 					</div>
-					<ul class="fh5co-social">
-						<li><a href="#"><i class="icon-envelope"></i></a></li>
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-google"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="fh5co-tab-content" data-content="2">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p></p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2001-2004</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2015年7月</h2>
+									<p>毕业于深圳大学信息工程学院电子信息工程专业.</p>
 								</div>
 							</div>
 
@@ -129,64 +124,46 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2016.3月——2016年10月</h2>
+									<p>就职于 深圳前海星邦策略互联网金融服务有限公司<br />
+									<span style="font-size: 15px;">担任 网站开发，网站运维，产品经理；<br />
+									工作内容：对网站功能和业务流程进行完善与调整，新功能的需求篡写；对网站进行维护，公司项目进行上线工作。 </span> </p>
 								</div>
 							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2008-2012</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-
 						</div>
 						
 					</div>
 				</div>
 			</div>
-            <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >免费网站模板</a></div>
 			<div class="fh5co-tab-content" data-content="3">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-
-							<p>I have the privilege to work with these cool companies.</p>
-
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008 - Present</h2>
-									<h3>XYZ Inc.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2016.3 - 2016.10</h2>
+									<h3>蜘蛛众筹网站建设与改版</h3>
+									<ul style="font-size: 15px;">
+										<li>对旧网站进行功能完善，逐渐过渡到新网站；</li>
+										<li>对网站各项目数据进行维护整理；</li>
+										<li>新网站数据库设计；</li>
+										<li>改进公司、网站运营工作。</li>
+									</ul>
 								</div>
 							</div>
-
+							
 							<div class="fh5co-feature">
+								<br />
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
 								</div>
-								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-black-tie"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>1999-2004</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+								<div class="fh5co-text">									
+									<h2>2016.12-2017.2</h2>
+									<h3>个人简易博客搭建</h3>
+									<p style="font-size: 15px;">自己业余时间制作的简易网站，仍在测试中。</p>
 								</div>
 							</div>
 
@@ -199,42 +176,33 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+							<div class="chart" data-percent="65"><span><strong>PHP</strong>65%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+							<div class="chart" data-percent="60"><span><strong>MySQL</strong>60%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
-						</div>
-
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+							<div class="chart" data-percent="60"><span><strong>HTML</strong>60%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+							<div class="chart" data-percent="60"><span><strong>CSS</strong>60%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+							<div class="chart" data-percent="50"><span><strong>JS</strong>50%</span></div>
+						</div>												
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="60"><span><strong>Java</strong>60%</span></div>
 						</div>
-
+						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+							<div class="chart" data-percent="85"><span><strong>Git</strong>85%</span></div>
+						</div>
+						
 					</div>
 				</div>
 			</div>
 		</div>
-		<footer id="fh5co-footer">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<small>
-						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
-						More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> Demo Images: <a href="#" target="_blank">Unsplash</a></span>
-					</small>
-				</div>
-			</div>
-		</footer>
 	</div>			
         </div>
     </div>
