--- a/web/www/css/style.css
+++ b/web/www/css/style.css
@@ -12,7 +12,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Source Sans Pro", Arial, sans-serif;
+  font-family: 黑体, 微软雅黑, Sans-serif;
   font-weight: 300;
   font-size: 20px;
   line-height: 1.5;
@@ -49,7 +49,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #fff;
-  font-family: "Source Sans Pro", Arial, sans-serif;
+  font-family: 黑体, 微软雅黑, Sans-serif;
   font-weight: 400;
   margin: 0 0 30px 0;
 }
