个人简介样式内容调整

--- a/web/www/view/about.html
+++ b/web/www/view/about.html
@@ -147,10 +147,10 @@
 									<h2>2016.3 - 2016.10</h2>
 									<h3>蜘蛛众筹网站建设与改版</h3>
 									<ul style="font-size: 15px;">
-										<li>对旧网站进行功能完善，逐渐过渡到新网站；</li>
-										<li>对网站各项目数据进行维护整理；</li>
-										<li>新网站数据库设计；</li>
-										<li>改进公司、网站运营工作。</li>
+										<li>· 对旧网站进行功能完善，逐渐过渡到新网站；</li>
+										<li>· 对网站各项目数据进行维护整理；</li>
+										<li>· 新网站数据库设计；</li>
+										<li>· 改进公司、网站运营工作。</li>
 									</ul>
 								</div>
 							</div>
