个人简介样式内容调整

--- a/web/www/view/about.html
+++ b/web/www/view/about.html
@@ -97,6 +97,7 @@
 								<br />
 								<p>Github: github.com/ZaraZ</p>
 								<p>个人邮箱: xiangyunz@outlook.com</p>
+								<p>联系方式: 18938884466</p>
 								<br />
 							</div>
 						</div>
