首页日志正文以及留言预览功能

--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -54,8 +54,8 @@
                     Posted By <?php echo $a['author']; ?>. <?php echo $a['pubtime']; ?>
                 </p>
                 <p class="art_preview_content">
-                    <a href="./artical_content.php">
-                    这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
+                    <a href="./artical_content.php?artical_id=<?php echo $a['artical_id']; ?>">
+                    <?php echo $a['art_content']; ?>
                     </a>
                 </p>
                 <p class="art_tags">
